update shell command

--- a/start-all.sh.template
+++ b/start-all.sh.template
@@ -1,10 +1,10 @@
 #!/bin/bash
-export TRACINGSERVER_HOME=/home/eddie/tracing-server
+export TRACINGSERVER_HOME=/home/eddie/tracing-server-2.0
 
 $TRACINGSERVER_HOME/run.sh
 while read LINE
 do
-	ssh $LINE "/home/eddie/tracing-server/run.sh > $TRACINGSERVER_HOME/anomalies.log 2>&1 &"
+	ssh $LINE "$TRACINGSERVER_HOME/run.sh 2>&1 &"
 done < slaves
 wait
 exit 0
