--- a/stop.sh.template
+++ b/stop.sh.template
@@ -1,9 +1,10 @@
 #!/bin/bash
-/home/eddie/tracing-server/stop.sh
-for i in disco-00{12..19}
+export TRACINGSERVER_HOME=/home/eddie/tracing-server-2.0
+$TRACINGSERVER_HOME/stop.sh
+while read LINE
 do
-	ssh $i "/home/eddie/tracing-server/stop.sh"
-        #pid=$(ps aux | grep "ssh -f -n $i /home/eddie/tracing-server/run.sh" | awk '{print $2}' | sort -n | head -n 1) # obtain the pid  
+	ssh $LINE "$TRACINGSERVER_HOME/stop.sh"
+        #pid=$(ps aux | grep "ssh -f -n $i $TRACINGSERVER_HOME/run.sh" | awk '{print $2}' | sort -n | head -n 1) # obtain the pid
         #kill ${pid}
 done
 wait
