--- a/updatebin.sh.template
+++ b/updatebin.sh.template
@@ -1,5 +1,5 @@
 #!/bin/bash
-export TRACINGSERVER_HOME=/home/cwei/tracing-server
+export TRACINGSERVER_HOME=/home/eddie/tracing-server-2.0
 while read LINE
 do
 	scp -r ./out/ eddie@$LINE:$TRACINGSERVER_HOME/
