--- a/uptracerconf.sh.template
+++ b/uptracerconf.sh.template
@@ -1,8 +1,8 @@
 #!/bin/bash
-export TRACINGSERVER_HOME=/home/eddie/tracing-server
+export TRACINGSERVER_HOME=/home/eddie/tracing-server-2.0
 
 while read LINE
 do
-	scp  ./conf/tracer.conf eddie@$LINE:$TRACINGSERVER_HOME/conf.tracer.conf
+	scp  ./conf/tracer.conf eddie@$LINE:$TRACINGSERVER_HOME/conf/
 done < slaves
 
