--- a/start-all.sh.template
+++ b/start-all.sh.template
@@ -4,7 +4,7 @@ export TRACINGSERVER_HOME=/home/eddie/tracing-server-2.0
 $TRACINGSERVER_HOME/run.sh
 while read LINE
 do
-	ssh $LINE "$TRACINGSERVER_HOME/run.sh 2>&1 &"
+	ssh $LINE "$TRACINGSERVER_HOME/run.sh 2>&1" &
 done < slaves
 wait
 exit 0
