read NM log; add shutdown hook

--- a/conf/tracer.conf.template
+++ b/conf/tracer.conf.template
@@ -1,4 +1,5 @@
 tracer.kafka.bootstrap.servers   localhost:9092
 
-tracer.log.root-dir             /home/eddie/hadoop-2.7.3/logs/userlogs
+tracer.log.app.root             /home/eddie/hadoop-2.7.3/logs/userlogs
+tracer.log.nodemanager.root     /home/eddie/hadoop-2.7.3/logs
 
