--- a/stop-all.sh.template
+++ b/stop-all.sh.template
@@ -1,8 +1,9 @@
 #!/bin/bash
-/home/eddie/tracing-server/stop.sh
+export TRACINGSERVER_HOME=/home/eddie/tracing-server-2.0
+$TRACINGSERVER_HOME/stop.sh
 while read LINE
 do
-	ssh $i "/home/eddie/tracing-server/stop.sh"
+	ssh $i "$TRACINGSERVER_HOME/stop.sh" &
 done < slaves
 wait
 exit 0
