--- a/stop.sh.template
+++ b/stop.sh.template
@@ -1,11 +1,2 @@
 #!/bin/bash
-export TRACINGSERVER_HOME=/home/eddie/tracing-server-2.0
-$TRACINGSERVER_HOME/stop.sh
-while read LINE
-do
-	ssh $LINE "$TRACINGSERVER_HOME/stop.sh"
-        #pid=$(ps aux | grep "ssh -f -n $i $TRACINGSERVER_HOME/run.sh" | awk '{print $2}' | sort -n | head -n 1) # obtain the pid
-        #kill ${pid}
-done
-wait
-exit 0
+ps -ef | grep TracingMaster | grep -v grep | cut -c 9-15 | xargs kill -s 15
