shell bug fixed

--- a/stop-all.sh.template
+++ b/stop-all.sh.template
@@ -3,7 +3,7 @@ export TRACINGSERVER_HOME=/home/eddie/tracing-server-2.0
 $TRACINGSERVER_HOME/stop.sh
 while read LINE
 do
-	ssh $i "$TRACINGSERVER_HOME/stop.sh" &
+	ssh $LINE "$TRACINGSERVER_HOME/stop.sh" &
 done < slaves
 wait
 exit 0
