cpu metric test

--- a/conf/tracer.conf.template
+++ b/conf/tracer.conf.template
@@ -3,3 +3,4 @@ tracer.kafka.bootstrap.servers   localhost:9092
 tracer.log.app.root             /home/eddie/hadoop-2.7.3/logs/userlogs
 tracer.log.nodemanager.root     /home/eddie/hadoop-2.7.3/logs
 
+tracer.tsdb.server              localhost:4242
