--- a/conf/tracer.conf.template
+++ b/conf/tracer.conf.template
@@ -1,3 +1,5 @@
+tracer.docker.monitor-interval  20
+
 tracer.kafka.bootstrap.servers   localhost:9092
 
 tracer.log.app.root             /home/eddie/hadoop-2.7.3/logs/userlogs
