--- a/conf/tracer.conf.template
+++ b/conf/tracer.conf.template
@@ -5,6 +5,8 @@ tracer.kafka.bootstrap.servers   localhost:9092
 
 tracer.log.app.root             /home/eddie/hadoop-2.7.3/logs/userlogs
 tracer.log.nodemanager.root     /home/eddie/hadoop-2.7.3/logs
+tracer.log.spark-api.path       ../conf/spark.api
+tracer.log.mr-api.path          ../conf/mr.api
 tracer.log.custom-api.enabled   false
 tracer.log.custom-api.path      ./custom.api
 
